--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@ body {
     0 4px 8px 0 rgba(0, 0, 0, .05);
 }
 
+.lista-plano li {
+  padding: 1rem;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
+}
+
+.lista-plano li:last-child {
+  border-bottom: none;
+}
+
 a {
   text-decoration: none;
 }
